--- a/src/components/Tarefa.css
+++ b/src/components/Tarefa.css
@@ -2,6 +2,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 15px 20px;
     margin: 5px 0px;
     color: white;
